--- a/chezzzaok/app/src/main/AndroidManifest.xml
+++ b/chezzzaok/app/src/main/AndroidManifest.xml
@@ -4,17 +4,18 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/z_icon"
+		android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".BlackjackSelect" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+		<activity android:name=".BlackjackSetup" android:screenOrientation="portrait" android:label="@string/app_name" android:noHistory="true" />
+        <activity android:name=".Blackjack" android:label="@string/app_name" />
     </application>
 
 </manifest>
